# RaspberryPi_Check

./: .gitignore  README.md  led_lib.c  servo.c
CMakeEx/: CMakeLists.txt  README.md  main.c  naiveGPIO.c  naiveGPIO.h
Ex1/: CMakeLists.txt  main.c
Ex1/GPIO_Test/gpiotest/: gpiotest  gpiotest.c
Ex2/: CMakeLists.txt  main.c  pthreadtest.c  pthreadtest.h
basicGPIO/: CMakeLists.txt  README.md  blink.c  button.c  button_Int.c  main.c
include/: led_lib.h
src/: IR_sensor.c  led_lib_main.c  led_wiringpi.c  light_sensor.c  th_sensor.c
